--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "are.na": "^0.1.4",
     "core-js": "^3.6.4",
     "d3": "^5.16.0",
+    "d3-force": "^2.0.1",
     "vue": "^2.6.11",
+    "vue-network-d3": "^0.1.2",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
