--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "core-js": "^3.6.4",
     "d3": "^5.16.0",
     "d3-force": "^2.0.1",
+    "tsne-js": "^1.0.3",
     "vue": "^2.6.11",
     "vue-network-d3": "^0.1.2",
-    "vue-router": "^3.1.6"
+    "vue-panzoom": "^1.1.1",
+    "vue-router": "^3.1.6",
+    "vue-svg-pan-zoom": "^1.1.0",
+    "x-frame-bypass": "^1.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -26,6 +30,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "vue-friendly-iframe": "^0.18.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
