--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "seedrandom": "^3.0.5",
     "vue-friendly-iframe": "^0.18.0",
     "vue-template-compiler": "^2.6.11"
   },
