--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-panzoom": "^1.1.1",
     "vue-router": "^3.1.6",
     "vue-svg-pan-zoom": "^1.1.0",
+    "vuex": "^3.4.0",
     "x-frame-bypass": "^1.0.2"
   },
   "devDependencies": {
