--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@panzoom/panzoom": "^4.1.0",
     "are.na": "^0.1.4",
     "core-js": "^3.6.4",
+    "curve-interpolator": "^2.0.8",
     "d3": "^5.16.0",
     "d3-force": "^2.0.1",
     "tsne-js": "^1.0.3",
