--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "curve-interpolator": "^2.0.8",
     "d3": "^5.16.0",
     "d3-force": "^2.0.1",
-    "tsne-js": "^1.0.3",
+    "node-sass": "^4.14.1",
     "vue": "^2.6.11",
+    "vue-draggable-resizable": "^2.2.0",
     "vue-network-d3": "^0.1.2",
     "vue-panzoom": "^1.1.1",
     "vue-router": "^3.1.6",
