--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   },
   "dependencies": {
     "@panzoom/panzoom": "^4.1.0",
+    "anim-event": "^1.0.16",
     "are.na": "^0.1.4",
     "core-js": "^3.6.4",
+    "cssprefix": "^2.0.16",
     "curve-interpolator": "^2.0.8",
     "d3": "^5.16.0",
     "d3-force": "^2.0.1",
+    "m-class-list": "^1.1.9",
     "node-sass": "^4.14.1",
+    "plain-draggable": "^2.5.12",
+    "pointer-event": "^1.0.0",
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.2.0",
     "vue-network-d3": "^0.1.2",
