--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@panzoom/panzoom": "^4.1.0",
     "anim-event": "^1.0.16",
-    "are.na": "^0.1.4",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.4",
     "cssprefix": "^2.0.16",
@@ -25,11 +24,8 @@
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.2.0",
     "vue-network-d3": "^0.1.2",
-    "vue-panzoom": "^1.1.1",
     "vue-router": "^3.1.6",
-    "vue-svg-pan-zoom": "^1.1.0",
-    "vuex": "^3.4.0",
-    "x-frame-bypass": "^1.0.2"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
