--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cssprefix": "^2.0.16",
     "curve-interpolator": "^2.0.8",
     "d3": "^5.16.0",
+    "d3-contour": "^1.3.2",
     "d3-force": "^2.0.1",
     "deep-copy": "^1.4.2",
     "m-class-list": "^1.1.9",
@@ -24,6 +25,7 @@
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.2.0",
     "vue-network-d3": "^0.1.2",
+    "vue-plotly": "^1.1.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.4.0"
   },
