--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pointer-event": "^1.0.0",
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.2.0",
+    "vue-mobile-detection": "^1.0.0",
     "vue-network-d3": "^0.1.2",
     "vue-plotly": "^1.1.0",
     "vue-router": "^3.1.6",
