--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vue-network-d3": "^0.1.2",
     "vue-plotly": "^1.1.0",
     "vue-router": "^3.1.6",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
