--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue-plotly": "^1.1.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.4.0",
-    "vuex-persistedstate": "^3.0.1"
+    "vuex-persistedstate": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
