--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "@panzoom/panzoom": "^4.1.0",
     "anim-event": "^1.0.16",
+    "babel-runtime": "^6.26.0",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.4",
     "cssprefix": "^2.0.16",
@@ -26,6 +27,7 @@
     "plain-draggable": "^2.5.12",
     "pointer-event": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-markdown": "^2.2.4",
     "vue-mobile-detection": "^1.0.0",
     "vue-network-d3": "^0.1.2",
     "vue-router": "^3.1.6",
