--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "@panzoom/panzoom": "^4.1.0",
+    "airtable": "^0.12.2",
     "anim-event": "^1.0.16",
     "babel-runtime": "^6.26.0",
     "copy-to-clipboard": "^3.3.1",
@@ -23,7 +24,6 @@
     "d3-force": "^2.0.1",
     "deep-copy": "^1.4.2",
     "m-class-list": "^1.1.9",
-    "node-sass": "^4.14.1",
     "panzoom": "^9.2.5",
     "plain-draggable": "^2.5.12",
     "pointer-event": "^1.0.0",
@@ -45,7 +45,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.26.3",
+    "sass": "^1.86.3",
     "sass-loader": "^8.0.2",
     "seedrandom": "^3.0.5",
     "vue-friendly-iframe": "^0.18.0",
